--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Irina Lo" />
 
-<!-- Stretch goal: Optional basic styling -->
-        <style> 
+    <link href="css/index.css" rel="stylesheet">
+    <!-- Stretch goal 8: Adding Google fonts: -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
+
+<!-- Stretch goal 7: Optional basic styling. Moved it to an external css -->
+<!--     <style> 
             body {
                 background-color:#F5F5F5; /* minimalistic soft gray */
                 color: #1E1E1E; /*  charcoal text */
@@ -61,8 +67,7 @@
                 color: #1E1E1E;
             }
 
-        </style>
-
+        </style> -->
   </head>
   <body>
     <h1>Irina Lo</h1>
@@ -74,6 +79,7 @@
       </nav>
 
     <section id="About">
+      <!-- Added a different picture other than myself -->
         <img src="images/alley_cropped.jpg" alt="Linden trees" style="width: 100%; height: auto;">
       <h2>About</h2>
       <p>
@@ -101,8 +107,8 @@
     <section id="Connect">
       <h2>Connect</h2>
       <ul>
-        <li><a href="https://github.com/locirin" target="_blank">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/placeholder" target="_blank"
+        <li><a href="https://github.com/locirin" target="_blank" title="Visit my GitHub profile">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/placeholder" target="_blank" title="Connect with me on LinkedIn"
             >LinkedIn</a></li>
       </ul>
     </section>
