Week 9 layout and Flexbox updates: Experience, Connect, Skills, Projects

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
     <nav>
         <a href="#About">About</a>
         <a href="#Experience">Experience</a>
+        <a href="#Skills">Skills</a>
+        <a href="#Projects">Projects</a>
         <a href="#Connect">Connect</a>
       </nav>
 
@@ -95,22 +97,57 @@
 
     <section id="Experience">
       <h2>Experience</h2>
-      <ul>
+      <!-- Commenting our for now. Replacing current list with divs to accomodate better layout: flexbox -->
+      <!-- <ul>
         <li>Code the Dream Bootcamp: Introduction to Programming</li>
-        <li>HTML, CSS, JavaScript</li>
-        <li>GitHub & Git basics</li>
+        <li>GitHub collaboration</li>
         <li>Agile principles and collaborative workflow</li>
         <li>Continuous development and delivery (CI/CD)</li>
+      </ul> -->
+      <div class="experience-item">
+        <div class="experience-header">
+          <span class="job-title">Code the Dream Bootcamp</span>
+          <span class="job-dates">February, 2025 - Present</span>
+        </div>
+        <p class="job-description">
+          Learning foundational programming, GitHub collaboration, Agile workflow, and CI/CD principles.
+          Introduction to Programming, GitHub collaboration, Agile principles and collaborative workflow, Continuous development and delivery (CI/CD).
+        </p>
+      </div>
+    </section>
+
+    <section id="Skills">
+      <h2>Skills</h2>
+    <ul>
+      <li>HTML, CSS, JavaScript</li>
+      <li>GitHub & Git basics</li>
+      <li>Responsive design</li>
+      <li>Accessibility (WCAG basics)</li>
+      <li>Agile principles and collaborative workflow</li>
+      </ul>
+    </section>
+
+    <section id="Projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>Placeholder</li>
+        <li>Placeholder</li>
+        <li>Placeholder</li>
       </ul>
     </section>
 
     <section id="Connect">
       <h2>Connect</h2>
-      <ul>
+      <!-- Changing to using direct links, flexbox. Removing <ul> -->
+      <!-- <ul>
         <li><a href="https://github.com/locirin" target="_blank" title="Visit my GitHub profile">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/placeholder" target="_blank" title="Connect with me on LinkedIn"
             >LinkedIn</a></li>
-      </ul>
+      </ul> -->
+      <div class="connect-links">
+        <a href="https://github.com/locirin" target="_blank" title="GitHub">GitHub</a>
+        <a href="https://www.linkedin.com/in/placeholder" target="_blank" title="LinkedIn">LinkedIn</a>
+      </div>
     </section>
   </body>
 </html>
