Week 11: Footer, dynamic skills list, responsive styling, CSS reorganization

--- a/index.html
+++ b/index.html
@@ -118,13 +118,15 @@
 
     <section id="Skills">
       <h2>Skills</h2>
-    <ul>
+      <!-- Week 11: Commenting out and replacing with <ul>. A new Skill section is added to index.js -->
+      <ul class="skills-list"></ul> 
+    <!-- <ul>
       <li>HTML, CSS, JavaScript</li>
       <li>GitHub & Git basics</li>
       <li>Responsive design</li>
       <li>Accessibility (WCAG basics)</li>
       <li>Agile principles and collaborative workflow</li>
-      </ul>
+      </ul> -->
     </section>
 
     <section id="Projects">
@@ -149,5 +151,6 @@
         <a href="https://www.linkedin.com/in/placeholder" target="_blank" title="LinkedIn">LinkedIn</a>
       </div>
     </section>
+    <script src="js/index.js"></script>
   </body>
 </html>
