Changes: added  dark mode, edit responsive nav, message layout, and styling cleanup

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         <a href="#Projects">Projects</a>
         <a href="#Connect">Connect</a>
         <a href="#leave-a-message">Leave a Message</a>
+
+        <button id="dark-mode-toggle" aria-label="Toggle dark mode">
+          <i class="fas fa-moon"></i> / <i class="fas fa-sun"></i>
+        </button>
       </nav>
 
     <section id="About">
@@ -219,8 +223,10 @@
 
     <section id="messages">
     <h2>Messages</h2>
+    <div class="message-tile">
       <ul>
       </ul>
+      </div>
     </section>
 
     <!-- RE: FOOTER: see index.js - footer element is being dynamically created there. It is showing at the bottom of the page (body). See index.css for Footer's styling -->
